# MRP

./: .clang-format  .gitignore  CMakeLists.txt
include/: GaussSeidel.hpp  Graph.hpp  Solvers.hpp  SparceMatrix.hpp  SparseMatrix.hpp
src/: EigenValueFinders.cpp  GaussSeidel.cpp  Helpers.cpp  main.cpp
tests/: AccuracyTests.cpp
